--- a/src/33225/ko_KR-kidw0124.html
+++ b/src/33225/ko_KR-kidw0124.html
@@ -5,13 +5,12 @@
   </div>
   <div id="problem_description" class="problem-text">
     <p>
-      늦은 저녁, Funky Punk Caf&eacute;에 앉아 있는 당신은 하루 종일 아무런
-      프로그래밍을 완료하지 않아 지루함을 느낍니다. 창문밖을 보던 당신은
-      네온사인이 재미있는 모습으로 반사되고 있는 것을 보았습니다. 창문의 유리가
-      이중창이였기 때문에 글자들이 부분적으로 겹쳐져 있는 것입니다. 이렇게
-      반사된 네온사인의 문구를 보고, 원래 문구를 알아낼 수 있을까요? 갑자기
-      영감을 받은 당신은 가방에서 노트북과 OCR<sup>1</sup> 카메라를 꺼내
-      프로그래밍을 시작합니다.
+      늦은 저녁, 카페에 앉아 있는 당신은 하루 종일 아무런 프로그래밍을 하지 않아
+      지루함을 느낍니다. 창문밖을 보던 당신은 네온사인이 재미있는 모습으로
+      반사되고 있는 것을 보았습니다. 창문의 유리가 이중창이였기 때문에 글자들이
+      부분적으로 겹쳐져 있는 것입니다. 이렇게 반사된 네온사인의 문구를 보고,
+      원래 문구를 알아낼 수 있을까요? 갑자기 영감을 받은 당신은 가방에서
+      노트북과 OCR<sup>1</sup> 카메라를 꺼내 프로그래밍을 시작합니다.
     </p>
 
     <p>
