--- a/src/33225/ko_KR-kidw0124.html
+++ b/src/33225/ko_KR-kidw0124.html
@@ -34,10 +34,14 @@
     <h2>입력</h2>
   </div>
   <div id="problem_input" class="problem-text">
-    <p>
-      첫 번째 줄에 알파벳 소문자(<code>a-z</code>)로 이루어진 길이 $10^6$ 이하의
-      문자열이 주어집니다. 이 문자열은 OCR 카메라로 인식된 반사된 단어입니다.
-    </p>
+    <p>입력은 다음과 같습니다.</p>
+    <ul>
+      <li>
+        첫 번째 줄에 알파벳 소문자(<code>a-z</code>)로 이루어진 길이 $10^6$
+        이하의 문자열이 주어집니다. 이 문자열은 OCR 카메라로 인식된 반사된
+        단어입니다.
+      </li>
+    </ul>
   </div>
 </section>
 <section id="output">
