--- a/src/33221/ko_KR-kidw0124.html
+++ b/src/33221/ko_KR-kidw0124.html
@@ -1,4 +1,4 @@
-<section id="title">Cake Promise</section>
+<section id="title">레벨테스트 선물</section>
 <section id="description">
   <div class="headline">
     <h2>문제</h2>
