--- a/src/33219/ko_KR-kidw0124.html
+++ b/src/33219/ko_KR-kidw0124.html
@@ -1,4 +1,4 @@
-<section id="title">Avant-garde</section>
+<section id="title">아방가르드</section>
 <section id="description">
   <div class="headline">
     <h2>문제</h2>
