--- a/src/33225/ko_KR-kidw0124.html
+++ b/src/33225/ko_KR-kidw0124.html
@@ -1,4 +1,4 @@
-<section id="title">Glass Reflection</section>
+<section id="title">유리 반사</section>
 <section id="description">
   <div class="headline">
     <h2>문제</h2>
@@ -16,7 +16,7 @@
     <p>
       당신의 OCR 카메라는 모든 글자가 중복되어 두 글자로 인식되는 것을
       제외하고는 거울에 비친 글자를 올바르게 인식합니다. 또한, 만약 원본 네온
-      사인 문구에 두 글자 이상이 연속되어 나타난다면, 이 글자들의 반사는
+      사인 문구에 두 글자 이상이 연속되어 나타난다면, 이 글자들의 반사된 모습은
       부분적으로 겹쳐져 있어 원본보다 한 글자 더 많이 나타납니다. 예를 들어,
       &quot;<code>beer</code>&quot;는 &quot;<code>bbeeerr</code>&quot;로
       반사되며, &quot;<code>ooo</code>&quot;는 &quot;<code>oooo</code>&quot;로
